# cloudfile

./: CMakeLists.txt  README.md
scripts/: build.ps1
src/: cloudfile.cpp  cloudfile.hpp  main.cpp
src/backends/: mac.cpp  mac.m  win.cpp
